--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
     <title>Bitbetio - Sports Betting HTML Template</title>
 
     <!--bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="css/EBZCnoCBtNCA.css">
+     <link rel="preload" href="css/EBZCnoCBtNCA.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/EBZCnoCBtNCA.css"></noscript>
+    
     <!--owl carousel css-->
     <link rel="stylesheet" type="text/css" href="css/6fwgXXZ6a3Mo.css">
     <!--magnific popup css-->
@@ -433,7 +435,7 @@
     <footer id="footer">
         <div class="footer-copyright">
             <div class="container">
-                <p class="text-center">Copyright © 2022. All Rights Reserved By <a class="text-white" href="https://themeforest.net/user/pixelaxis">pixelaxis</a></p>
+                <p class="text-center">Copyright © 2022. All Rights Reserved By <a class="text-white" href="">pixelaxis</a></p>
             </div>
         </div>
     </footer>
