--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content>
     <meta name="description" content>
-    <title>Bitbetio - Sports Betting HTML Template</title>
+    <title>1xBet- Sports Betting HTML Template</title>
 
     <!--bootstrap css-->
      <link rel="preload" href="css/EBZCnoCBtNCA.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="demo-heading-content text-center">
-                        <h1><span>Bitbetio </span>  -  Sports Betting Website HTML Template</h1>
+                        <h1><span>1XBET </span>  -  Sports Betting Website HTML Template</h1>
                         <a href="#demo-area">Demos</a>
                     </div>
                 </div>
